--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -16,7 +16,6 @@
         android:hapticFeedbackEnabled="true"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pizza_sample" />
@@ -27,7 +26,6 @@
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="@+id/item_image"
         app:layout_constraintEnd_toEndOf="@+id/item_image"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/item_image"
         app:srcCompat="@drawable/image_btm_overlay" />
 
@@ -58,20 +56,19 @@
         app:layout_constraintBottom_toBottomOf="@+id/back_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/back_btn"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/full_size_ic"
         app:tint="@color/white" />
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="match_parent"
+        android:layout_height="479dp"
+        android:layout_marginTop="-20dp"
         android:background="@drawable/card_recipe"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/item_image">
+        app:layout_constraintTop_toBottomOf ="@+id/item_image">
 
         <TextView
             android:id="@+id/title"
@@ -92,7 +89,7 @@
             android:layout_below="@+id/title"
             android:layout_alignParentStart="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="5sp"
+            android:layout_marginTop="5dp"
             android:src="@drawable/clock_icon"
             app:tint="#019267" />
 
@@ -101,12 +98,11 @@
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:layout_below="@+id/title"
-
             android:layout_marginStart="6dp"
             android:layout_marginTop="3dp"
             android:layout_toEndOf="@+id/clock"
             android:gravity="center_vertical"
-            android:text="30mins"
+            android:text="30 mins"
             android:textColor="@color/black" />
 
         <Button
@@ -136,8 +132,8 @@
             <TextView
                 android:id="@+id/ing_data"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:lineSpacingExtra="10dp"
                 android:text=""
                 android:textColor="@color/black"
@@ -173,7 +169,7 @@
                 android:id="@+id/step_data"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center_horizontal"
                 android:lineSpacingExtra="10dp"
                 android:text=""
                 android:textColor="@color/black"
